font style added

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,10 @@
     transform: rotate(360deg);
   }
 }
+.font{
+font-family: "Josefin Sans", sans-serif;
+  /* font-optical-sizing: auto; */
+  font-weight: 700;
+  
+  /* font-style: normal; */
+}
