--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  /* background-color: #eae8e5; */
+  /* background-color: #E0E8D0;   */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
