--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   /* background-color: #E0E8D0;   */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
