--- a/src/App.css
+++ b/src/App.css
@@ -64,12 +64,54 @@ p{
   display: flex;
   justify-content: center;
   align-items: center; */
-  background-color: #bde6ad54;
+  /* background-color: #bde6ad54; */
   transition: transform 0.3s ease; /* Smooth transition effect */
-  z-index: 1;
+  z-index: 0;
 
 }
 
 .magnify-div:hover {
   transform: scale(1.2); /* Magnifies the div by 1.2 times */
+}
+.expandClassL{
+  position: relative;
+  z-index: 1;
+  background-color: white;
+  /* height: 400px;
+  width: 400px; */
+  transition: transform 0.6s ease;
+  transform: scaleX(3) scaleY(3) translateX(20%) translateY(30%);
+  /* transform: translateY(40%); */
+  /* top: 40%; */
+}
+.minimizeClassL{
+  position: relative;
+  z-index: 0;
+  /* background-color: white; */
+  /* background-color: yellow; */
+  /* height: 400px;
+  width: 400px; */
+  transition: transform 0.2s ease;
+  transform: scale(01);
+}
+.expandClassR{
+  position: relative;
+  z-index: 1;
+  /* background-color: white; */
+  /* height: 400px;
+  width: 400px; */
+  transition: transform 0.6s ease;
+  transform: translateY(30%) scaleY(3) scaleX(3)  translateX(-20%) ;
+  /* transform: translateY(40%); */
+  /* top: 40%; */
+}
+.minimizeClassR{
+  position: relative;
+  z-index: 0;
+  /* background-color: white; */
+  /* background-color: yellow; */
+  /* height: 400px;
+  width: 400px; */
+  transition: transform 0.2s ease;
+  transform: scale(01);
 }
